# Image2Model

./: README.rst  pyproject.toml  rm  setup.cfg
image2model/: __main__.py  model.py
