[tool.poetry]
name = "Image2Model"
version = "0.1.0"
description = "2D image to 3D model web-service using machine learning"
authors = ["rrraumpanzer <ayylmao3713@gmail.com>","GabTenma <hoseamattews24@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
httpie = "^3.2.3"
pillow = "^11.0.0"
python-multipart = "^0.0.16"
htmlx = "^0.0.3"
pydantic = "^2.9.2"
transformers = "^4.46.2"
torchvision = "^0.20.1"
scikit-image = "^0.24.0"
refiners = { git = "https://github.com/finegrain-ai/refiners.git" }
torchmcubes = { git = "https://github.com/tatsy/torchmcubes.git" }
wheel = "^0.45.0"
omegaconf = "^2.3.0"
einops = "^0.8.0"
trimesh = "^4.5.2"
xatlas = "^0.0.9"
moderngl = "^5.12.0"
huggingface-hub = "^0.26.2"
imageio = "^2.36.0"
torch = "^2.5.1"


[tool.poetry.dev-dependencies]
pytest = "^8.3.3"

[tool.poetry.group.dev.dependencies]
torch = "^2.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
